// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserController <Create/ > should create a user 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "followers": 0,
  "following": 0,
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`UserController <Create/ > should throw ConflictException when email or username is already in use 1`] = `[ConflictException: This email or username is already associated with an existing account]`;

exports[`UserController <DesactivateUser /> should delete a user successfully 1`] = `
{
  "message": "User desactivated successfully",
}
`;

exports[`UserController <FindAll /> should return an array of users if user is logged in and token is valid 1`] = `
{
  "count": 1,
  "items": [
    {
      "id": "42-d-f-df4",
      "name": "John Doe",
      "profileImg": "https://example.com/profile.jpg",
      "username": "jDoe453",
    },
  ],
}
`;

exports[`UserController <FindOne /> should return a user successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "followers": 0,
  "following": 0,
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;

exports[`UserController <FindOne /> should throw an NotFoundException 1`] = `[NotFoundException: User not found]`;

exports[`UserController <RemoveProfilePicture /> should remove profile picture successfully 1`] = `
{
  "active": true,
  "bio": "This is my bio",
  "followers": 0,
  "following": 0,
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": null,
  "username": "jDoe453",
}
`;

exports[`UserController <Update /> should update a user successfully 1`] = `
{
  "active": true,
  "bio": "Update bio",
  "followers": 0,
  "following": 0,
  "id": "42-d-f-df4",
  "name": "John Doe",
  "profileImg": "https://example.com/profile.jpg",
  "username": "jDoe453",
}
`;
